10.0/BlazorWebAppWinAuthServer/README.md
10.0\**\README# Blazor Web App with Windows Authentication

This sample features:

- A Blazor Web App with global Server interactivity.
- Windows Authentication.

## Article for this sample app

The article for this sample app is [Secure an ASP.NET Core Blazor Web App with Windows Authentication](https://learn.microsoft.com/aspnet/core/blazor/security/blazor-web-app-with-windows-authentication).

If you need to open an issue that pertains to the coding of the sample app, open [an issue on this samples repo](https://github.com/dotnet/blazor-samples/issues). Otherwise, open an issue using the **Open a documentation issue** link/feedback form at the bottom of [the article](https://learn.microsoft.com/aspnet/core/blazor/security/blazor-web-app-with-windows-authentication).

## Run the sample

If the sample uses third-party NuGet packages, update the packages to the latest versions, including patch versions. Updating Microsoft NuGet packages to the latest patch version is optional because the .NET SDK uses the highest available patch version by default.

### Visual Studio

1. Open the `BlazorWebAppWinAuthServer` solution file in Visual Studio.
1. Start the app with either Visual Studio's Run button or by selecting **Start Debugging** from the **Debug** menu.

### .NET CLI

In a command shell, navigate to the `BlazorWebAppWinAuthServer` project folder and use the `dotnet watch` command to run the sample.
